--- a/style.css
+++ b/style.css
@@ -580,14 +580,15 @@ span {
 
   .navbar {
     position: absolute;
-    top: 100%;
+    top: 56px;
     left: 0;
     width: 100%;
     padding: 1rem 3%;
     background: var(--bg-color);
     border-top: .1rem solid rgba(0, 0, 0, .2);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-    /* display: none; */
+    display: none;
+    z-index: 99;
   }
 
 .navbar.active {
