--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ span {
 }
 
 .skill-heading {
-  text-align: left;
+  text-align: center;
   line-height: 1.2;
   font-size: 5.0rem;
   gap: 2rem;
@@ -289,8 +289,9 @@ span {
 }
 
 .skill-content {
-  margin-top: 3cm;
-  margin-left: 2cm;
+  /* margin-top: 3cm;
+  margin-left: auto; */
+  margin: auto;
   text-align: left;
   line-height: 2.0;
   justify-content: center;
@@ -299,7 +300,7 @@ span {
 
 /*project section */
 .projects {
-  background: var(--second-bg-color);
+  background: var(--bg-color);
 }
 
 .projects h2 {
@@ -379,7 +380,7 @@ span {
 
 /* achievement section */
 .achievements {
-  background: var(--bg-color);
+  background: var(--second-bg-color);
 }
 
 .achievements h2 {
@@ -402,17 +403,17 @@ span {
 
 .achv-content .achv-box {
   flex: 1 1 30rem;
-  background: var(--second-bg-color);
+  background: var(--bg-color);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
-  border: .2rem solid var(--bg-color);
+  border: .2rem solid var(--second-bg-color);
   transition: .5s ease;
 }
 
 .achv-content .achv-box:hover {
   border-color: var(--main-color);
-  transform: scale(1.02);
+  transform: scale(1.03);
 }
 
 .achv-box i {
