--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@
 }
 
 :root {
-  --bg-color: #1f242d;
-  --second-bg-color: #323946;
+  --bg-color: #000000;
+  --second-bg-color: #0c0c0c;
   --text-color: #fff;
-  --main-color: #0ef;
+  --main-color: #FFA86A;
 }
 
 html {
@@ -54,11 +54,35 @@ section {
   width: 100%;
 }
 
-.logo {
-  font-size: 2.5rem;
-  color: var(--text-color);
-  font-weight: 600;
-  cursor: pointer;
+.aside .logo a{
+    color: var(--text-color);
+    font-weight: 700;
+    padding: 10px 15px;
+    font-size: 22px;
+    letter-spacing: 1px;
+    position: relative;
+}
+
+.aside .logo a::before{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 15px;
+    border-bottom: 5px solid var(--main-color);
+    border-left: 5px solid var(--main-color);
+    bottom: 0;
+    left: 0;
+}
+
+.aside .logo a::after{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 15px;
+    border-top: 5px solid var(--main-color);
+    border-right: 5px solid var(--main-color);
+    top: 0;
+    right: 0;
 }
 
 .navbar a {
