--- a/style.css
+++ b/style.css
@@ -296,32 +296,27 @@ span {
 /* skill section */
 .skills {
   background: var(--second-bg-color);
-  display: flex;
+  display: block;
   gap: 2rem;
 }
 
-.skill-heading {
-  text-align: center;
-  line-height: 1.2;
-  font-size: 5.0rem;
-  gap: 2rem;
-  margin-right: 2cm;
+.skills .heading {
+  padding-top: 130px;
+}
+
+.skill-content {
+  padding-top: 50px;
+  margin: auto;
+  max-width: 400px;
+  line-height: 2.0;
+  justify-content: center;
+  align-items: center;
 }
 
 .skill-content p {
   font-size: 2.0rem;
   gap: 2rem;
 }
-
-.skill-content {
-  /* margin-top: 3cm;
-  margin-left: auto; */
-  margin: auto;
-  text-align: left;
-  line-height: 2.0;
-  justify-content: center;
-}
-
 
 /*project section */
 .projects {
@@ -380,11 +375,14 @@ span {
 }
 .proj-layer h4 {
   font-size: 3rem;
+  color: var(--second-bg-color);
 }
 
 .proj-layer p {
   font-size: 1.6rem;
   margin: .3rem 0 1rem;
+  color: var(--second-bg-color);
+  font-weight: bold;
 }
 
 .proj-layer a {
